Update github link
Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -9,5 +9,5 @@ enableRobotsTXT = true
   site_logo = 'geometric.png'
   author = 'Temperate Designs'
   description = 'Simple yet useful apps.'
-  github = 'Temperate-Designs'
+  github = 'https://github.com/Temperate-Designs/temperate-designs.github.io'
   featured_image = 'red-and-blue-ink-explosion-picjumbo-com-logo.jpg'
