--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://temperate-designs.github.io/'
 languageCode = 'en-us'
 title = 'Temperate Designs'
-theme = "ananke"
+theme = ["ananke"]
 googleAnalytics = "G-K69Z84DP1Y"
 enableRobotsTXT = true
 
