--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ googleAnalytics = "G-K69Z84DP1Y"
 enableRobotsTXT = true
 
 [params]
-  site_logo = '/geometric.png'
+  site_logo = '/temperate-designs-logo.png'
   author = 'Temperate Designs'
   description = 'Simple yet useful apps.'
   github = 'https://github.com/Temperate-Designs'
