--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,75 @@
-baseURL = 'https://temperate-designs.github.io/'
-languageCode = 'en-us'
-title = 'Temperate Designs'
-theme = ["ananke"]
-googleAnalytics = "G-K69Z84DP1Y"
+baseURL = "https://temperate-designs.github.io"
+title = "Temperate Designs"
+author = "username"
+languageCode = "en"
+DefaultContentLanguage = "en"
+enableInlineShortcodes = true
+theme = "tella"
 enableRobotsTXT = true
 
+# Please enable this feature if the site is available in Japanese, Chinese or Korean.
+#hasCJKLanguage = true
+
+# If you're using Google Analytics, you can enable this feature.
+googleAnalytics = "G-K69Z84DP1Y"
+
+# Disqus Comment System
+#disqusShortname = ""
+
 [params]
-  site_logo = '/temperate-designs-logo.png'
-  author = 'Temperate Designs'
-  description = 'Simple yet useful apps.'
-  github = 'https://github.com/Temperate-Designs'
-  featured_image = '/red-and-blue-ink-explosion-picjumbo-com-logo.jpg'
-  recent_posts_number = 2
+
+  [params.logo]
+    main = "temperate-designs-logo.png"
+    alt = "Temperate Designs Logo"
+
+  [params.site]
+    name = "Temperate Designs"
+
+  [params.icon]
+    #If you want to use FontAwesome, set this parameter to true.
+    fa5 = true
+
+  [params.homepage_meta_tags]
+    meta_description = "A Hugo Theme for OSSProject, Companies, Organization..."
+    meta_og_title = "Temperate Designs"
+    meta_og_type = "website"
+    meta_og_url = "https://temperate-designs.github.io"
+    meta_og_image = "red-and-blue-ink-explosion-picjumbo-com-logo.jpg"
+    meta_og_description = "A Hugo Theme for OSSProject, Companies, Organization..."
+    meta_twitter_card = "summary_large_image"
+    meta_twitter_site = "@username"
+    meta_twitter_creator = "@username"
+
+[menu]
+
+  [[menu.main]]
+    identifier = "products"
+    name = "Products"
+    url = "/products/"
+    weight = 1
+
+  # [[menu.main]]
+  #   identifier = "about"
+  #   name = "About"
+  #   url = "/about/"
+  #   weight = 3
+
+  # [[menu.main]]
+  #   identifier = "contact"
+  #   name = "Contact"
+  #   url = "/contact/"
+  #   weight = 4
+
+  # Footer Menu
+  # [[menu.footer]]
+  #   name = "Home"
+  #   url = "/"
+  #     weight = 1
+
+  # [[menu.footer]]
+  #   name = "Github"
+  #   url = "https://github.com/opera7133/tella"
+  #     weight = 2
+
+[build]
+  writeStats = true
