--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -55,6 +55,8 @@ jobs:
           HUGO_ENV: production
         run: hugo --minify
 
+      - run: tree
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
