--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -55,7 +55,9 @@ jobs:
           HUGO_ENV: production
         run: hugo --minify
 
-      - run: tree
+      - run: pwd
+      - run: tree ./public
+      - run: echo ${GITHUB_WORKSPACE}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
