Add hidden file to output folder
Signed-off-by: Nicolas Bock <nicolasbock@gmail.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -55,6 +55,7 @@ jobs:
           HUGO_ENV: production
         run: hugo --minify
 
+      - run: touch public/.keep
       - run: tree ${GITHUB_WORKSPACE}/public
       - run: echo ${GITHUB_WORKSPACE}
 
