--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://temperate-designs.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Temperate Designs'
 theme = 'basic'
