--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -27,10 +27,11 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install dependencies
         run: sudo snap install hugo
+      - run: hugo
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
+          path: 'public'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
